--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "About Me"
+title: "关于 Aacoin"
 description: "If You Want It </br> Work For It "
 header-img: "img/post-about.jpg"
 ---
