--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
+description: "网站异常，请联系管理员 🙊"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
