--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Bye Stability </br> Morning My Life"
+description: "Bye Stability </br> Morning My Life -index"
 ---
 
 {% for post in paginator.posts %}
