--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: tags
 layout: default
-description: If You Want It </br> Work For It-Tags 
+description: AAcoin Tags 
 header-img: img/tag-bg.jpg
 ---
 
