--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "If You Want It Work For It"
+description: "If You Want It </br> Work For It"
 ---
 
 {% for post in paginator.posts %}
