--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: tags
 layout: default
-description: "         </br>         </br>       "
+description: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 header-img: img/tag-bg.jpg
 ---
 
