--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "         </br>         </br>       "
+description: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 ---
 
 {% for post in paginator.posts %}
