--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "关于 Aacoin"
-description: "If You Want It </br> Work For It "
+description: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
 header-img: "img/post-about.jpg"
 ---
 
