--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "关于 Aacoin"
 description: "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"
-header-img: "img/post-about.jpg"
+header-img: "img/tag-bg.jpg"
 ---
 
 <!-- Language Selector -->
