--- a/about.html
+++ b/about.html
@@ -25,9 +25,11 @@ header-img: "img/tag-bg.jpg"
 
     <ul>
       <li> AAcoin是一个加密货币的交易平台，立足于技术研发，安全保障，以成为全球顶级人工智能数字资产交易平台所为目标 ，以发现优质的数字资产投资机会，向全球区块链爱好者提供安全更加安全、便捷的区块链资产交易服务为己任；</li>
-      <li> 网站成立于2017年，网址：www.aacoin.com，平台隶属于英国，</li>
-      <li> 由前腾讯、平安组成的明星团队，兼具传统金融和加密货币的技术和运营，为交易所的功能实现提供有力的支撑，为全球化运营提供保障。目前平台已上线，飞速发展中。</li>
+      <li> 网站成立于2017年，网址：www.aacoin.com，平台隶属于英国，由前腾讯、平安组成的明星团队，兼具传统金融和加密货币的技术和运营，为交易所的功能实现提供有力的支撑，为全球化运营提供保障。目前平台已上线，飞速发展中。</li>
       <li> 平台拥有强大的合作伙伴，世界级的投资者-矿世云，共识资本，日本的数字加密者协会等站台，此外还有蒙古国的交易资质证书。</li>
+      <li> <b> AAT的价值 </b></li>
+      <li> 1、抵扣交易手续费：在AAcoin平台上参与交易的用户，如果您持有AAT平台代币，无论交易何种代币，在需支付交易手续费时，系统会对所需支付的手续费进行打折优惠，并按当时市值折算出等值AAT平台代币数量，扣除该数量AAT作为手续费。用户可以在个人中心自行开启或关闭AAT抵扣开关，默认是开启的。目前的折扣比例是如下：持有AAT数量 10万以下 10—30万 30-50万 50万以上 折扣比例 50% 60% 70% 80% 折扣如有变动，关注官方公告。</li>
+      
     </ul>
 </div>
 
