--- a/about.html
+++ b/about.html
@@ -24,23 +24,23 @@ header-img: "img/tag-bg.jpg"
     <h5> 介绍 </h5>
 
     <ul>
-      <li> &nbsp;&nbsp;AAcoin是一个加密货币的交易平台，立足于技术研发，安全保障，以成为全球顶级人工智能数字资产交易平台所为目标 ，以发现优质的数字资产投资机会，向全球区块链爱好者提供安全更加安全、便捷的区块链资产交易服务为己任；</li>
-      <li> &nbsp;&nbsp;网站成立于2017年，网址：www.aacoin.com，平台隶属于英国，由前腾讯、平安组成的明星团队，兼具传统金融和加密货币的技术和运营，为交易所的功能实现提供有力的支撑，为全球化运营提供保障。目前平台已上线，飞速发展中。</li>
-      <li> &nbsp;&nbsp;平台拥有强大的合作伙伴，世界级的投资者-矿世云，共识资本，日本的数字加密者协会等站台，此外还有蒙古国的交易资质证书。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;AAcoin是一个加密货币的交易平台，立足于技术研发，安全保障，以成为全球顶级人工智能数字资产交易平台所为目标 ，以发现优质的数字资产投资机会，向全球区块链爱好者提供安全更加安全、便捷的区块链资产交易服务为己任；</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;网站成立于2017年，网址：www.aacoin.com，平台隶属于英国，由前腾讯、平安组成的明星团队，兼具传统金融和加密货币的技术和运营，为交易所的功能实现提供有力的支撑，为全球化运营提供保障。目前平台已上线，飞速发展中。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;平台拥有强大的合作伙伴，世界级的投资者-矿世云，共识资本，日本的数字加密者协会等站台，此外还有蒙古国的交易资质证书。</li>
       <li> <b> AAT的价值 </b></li>
-      <li> &nbsp;&nbsp;1、抵扣交易手续费：在AAcoin平台上参与交易的用户，如果您持有AAT平台代币，无论交易何种代币，在需支付交易手续费时，系统会对所需支付的手续费进行打折优惠，并按当时市值折算出等值AAT平台代币数量，扣除该数量AAT作为手续费。用户可以在个人中心自行开启或关闭AAT抵扣开关，默认是开启的。目前的折扣比例是如下：持有AAT数量 10万以下 10—30万 30-50万 50万以上 折扣比例 50% 60% 70% 80% 折扣如有变动，关注官方公告。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;1、抵扣交易手续费：在AAcoin平台上参与交易的用户，如果您持有AAT平台代币，无论交易何种代币，在需支付交易手续费时，系统会对所需支付的手续费进行打折优惠，并按当时市值折算出等值AAT平台代币数量，扣除该数量AAT作为手续费。用户可以在个人中心自行开启或关闭AAT抵扣开关，默认是开启的。目前的折扣比例是如下：持有AAT数量 10万以下 10—30万 30-50万 50万以上 折扣比例 50% 60% 70% 80% 折扣如有变动，关注官方公告。</li>
       <li> <b> 定期回购 </b></li>
-      <li> &nbsp;&nbsp;2、AAT平台代币上线后，每个月将AAcoin平台当月净利润的20%用于回购AAT，回购的AAT直接销毁，回购记录将会第一时间公布，用户可通过区块链浏览器查询，确保公开透明，直至销毁到总量为10亿个AAT为止。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;2、AAT平台代币上线后，每个月将AAcoin平台当月净利润的20%用于回购AAT，回购的AAT直接销毁，回购记录将会第一时间公布，用户可通过区块链浏览器查询，确保公开透明，直至销毁到总量为10亿个AAT为止。</li>
       <li> <b> 持币分红 </b></li>
-      <li> &nbsp;&nbsp;3、持有AAT的用户，平台每上一个新币，将得到交易所赠送的空投新币。其他平台上可交易的币种也会联系项目方不定期空投给持有AAT者。空投的数量按照持有AAT的比例发放。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;3、持有AAT的用户，平台每上一个新币，将得到交易所赠送的空投新币。其他平台上可交易的币种也会联系项目方不定期空投给持有AAT者。空投的数量按照持有AAT的比例发放。</li>
       <li> <b> 上币投票 </b></li>
-      <li> &nbsp;&nbsp;4、AAcoin上币有投票制，也有审核制度，需要投票方在市场中购买AAT用于投票，目前还有大量币种在审核等待上市交易。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;4、AAcoin上币有投票制，也有审核制度，需要投票方在市场中购买AAT用于投票，目前还有大量币种在审核等待上市交易。</li>
       <li> <b> 利润分红 </b></li>
-      <li> &nbsp;&nbsp;5、AAT的持有者将享受平台的利润分红，每个季度将AAcoin平台再拿出当季净利润的30%用于回馈用户，根据拥用户拥有的AAT按比例空投至平台账户。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;5、AAT的持有者将享受平台的利润分红，每个季度将AAcoin平台再拿出当季净利润的30%用于回馈用户，根据拥用户拥有的AAT按比例空投至平台账户。</li>
       <li> <b> 法币交易区认证商家保证金 </b></li>
-      <li> &nbsp;&nbsp;6、使用AAT充当保证金，成为法币交易认证商家，获得专属认证标识、一对一客户服务。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;6、使用AAT充当保证金，成为法币交易认证商家，获得专属认证标识、一对一客户服务。</li>
       <li> <b> 具体内容 </b></li>
-      <li> &nbsp;&nbsp;7、详见官网：https://www.aacoin.com/aat#get。</li>
+      <li> &nbsp;&nbsp;&nbsp;&nbsp;7、详见官网：https://www.aacoin.com/aat#get。</li>
           
     </ul>
 </div>
